add dialog to select patient on diabetes screen

--- a/main.kv
+++ b/main.kv
@@ -251,6 +251,7 @@
             on_release: root.open_add_med_dialog()
 
     MDTopAppBar:
+        id: top_bar_diabetes
         title: "Diabetes"
         left_action_items: [["arrow-left", lambda x: app.change_screen("control"), "Voltar"]]
         right_action_items: [["home", lambda x: app.change_screen("control"), "Inicio"]]
