--- a/main.kv
+++ b/main.kv
@@ -214,7 +214,7 @@
         padding: 0
         size_hint: (None, None)
         width: root.width - dp(20)
-        height: dp(430)
+        height: dp(420)
         md_bg_color: (51, 53, 53, 0.07)
 
         BoxLayout:
@@ -253,7 +253,7 @@
             width: '150dp'
             width: root.width - dp(20)
             pos_hint: {'center_x': 0.5}
-            on_release: root.open_add_med_dialog()
+            on_release: root.open_add_glicose_dialog()
 
     MDTopAppBar:
         id: top_bar_diabetes
