changes in the controle_dt table so it gets the current date

--- a/main.kv
+++ b/main.kv
@@ -247,7 +247,7 @@
         md_bg_color: (0, 0, 0, 0)
 
         MDFillRoundFlatButton:
-            text: 'Adicionar'
+            text: 'Adicionar glicose'
             font_size: '20sp'
             size_hint_x: 1.0
             width: '150dp'
